--- a/src/components/Menu/style.module.css
+++ b/src/components/Menu/style.module.css
@@ -2,12 +2,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: row;
+    padding: 10px 0;
     gap: 1.6rem;
 }
 
 .menuLink {
     display: inline-flex;
+    /* flex-direction: row; */
     align-items: center;
     justify-content: center;
     text-decoration: none;
